firmware/lib/control-table/tests/ui/enum_variant_with_fields.stderr
error: Enum derive requires unit variants only
 --> tests/ui/enum_variant_with_fields.rs:7:5
  |
7 |     B(u8),
  |     ^^^^^
