firmware/lib/control-table/tests/ui/enum_variant_with_fields.rs
use control_table::Enum;

#[derive(Enum)]
#[repr(u8)]
enum HasPayload {
    A,
    B(u8),
}

fn main() {}
